fix html and css paths

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/portfolio/portfolio.css">
+    <link rel="stylesheet" href="/style.css">
     
 
   
@@ -92,7 +92,7 @@
     <a href="https://www.linkedin.com/in/muhammadyahyaofficial/" target="_blank"><i class="fab fa-linkedin"></i></a>
 </div>
              <div class="profile-pic">
-    <img src="/portfolio/images/Gemini_Generated_Image_mc7vfmmc7vfmmc7v.png" alt="Muhammad Yahya">
+    <img src="./images/Gemini_Generated_Image_mc7vfmmc7vfmmc7v.png" alt="Muhammad Yahya">
 </div>
         </div>
         <div class="main">
@@ -186,19 +186,19 @@ I approach every project with the same mindset: communicate clearly, build effic
             
                 <div class="project-card">
                     <a href="/assign6.html" target="_blank">
-                        <img src="/portfolio/images/Screenshot 2025-11-27 003140.png" alt="Project Preview">
+                        <img src="./images/Screenshot 2025-11-27 003140.png" alt="Project Preview">
                         <div class="overlay"><span> <i class="fa-solid fa-magnifying-glass-plus" style="color: #ffffff;"></i>Front Page Design</span></div>
                     </a>
                 </div>
                 <div class="project-card">
                         <a href="/assignment.html"  target="_blank">
-                            <img src="/portfolio/images/Screenshot 2025-11-27 003627.png">
+                            <img src="./images/Screenshot 2025-11-27 003627.png">
                             <div class="overlay"><span><i class="fa-solid fa-magnifying-glass-plus" style="color: #ffffff;"></i> Sign in Page</span></div>
                         </a>
                     </div>
                     <div class="project-card">
                     <a href="/assign5.html" target="_blank">
-                        <img src="/portfolio/images/Screenshot 2025-11-27 003217.png">
+                        <img src="./images/Screenshot 2025-11-27 003217.png">
                         <div class="overlay"><span><i class="fa-solid fa-magnifying-glass-plus" style="color: #ffffff;"></i> Form Page</span></div>
                     </a>
                 </div>
@@ -211,13 +211,13 @@ I approach every project with the same mindset: communicate clearly, build effic
                 <div class="second22"> 
                     <div class="project-card">
                         <a href="/assign3.html"  target="_blank">
-                            <img src="/portfolio/images/Screenshot 2025-11-27 003312.png">
+                            <img src="./images/Screenshot 2025-11-27 003312.png">
                             <div class="overlay"><span><i class="fa-solid fa-magnifying-glass-plus" style="color: #ffffff;"></i> Product Card</span></div>
                         </a>
                     </div>
                     <div class="project-card"  target="_blank">
                     <a href="/sample.html">
-                        <img src="/portfolio/images/Screenshot 2025-11-27 003247.png">
+                        <img src="./images/Screenshot 2025-11-27 003247.png">
                         <div class="overlay"><span><i class="fa-solid fa-magnifying-glass-plus" style="color: #ffffff;"></i> Front Page</span></div>
                     </a>
                 </div>
