Your message here

--- a/portfolio/projects/assign3.html
+++ b/portfolio/projects/assign3.html
@@ -64,7 +64,7 @@
         </div>
           <div class="bottom">
                  <div class="person">
-                <img src="/assets/image/OIP (1).webp" alt="person" srcset="">
+                <img src="../assets/project-image/OIP (1).webp" alt="person" srcset="">
 
         </div>
             <label>Thorn Jason <i class="fa-solid fa-circle-check" style="color: #095cec;"></i></label>
