Updated website content

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -256,7 +256,7 @@
       <div class="first">
         <div class="project-card">
           <!-- Placeholder or duplicate for now as user requested structure to upload projects later -->
-          <a href="#" target="_blank">
+          <a href="https://abudhabicurtains.vercel.app/" target="_blank">
             <img src="./images/Screenshot 2026-01-13 151639.png" alt="Project Preview">
             <div class="overlay"><span><i class="fa-solid fa-code" style="color: #ffffff;"></i> Abu Dhabi Curtains
                 Elegant Web Design <br>
