Updated website content

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -48,11 +48,11 @@
     <a href="#section5" data-label="Vibe Coding"></a>
   </div>
   <section id="section1">
-    <div class="section1-info">
+    <div class="section1-info reveal">
       <h1>Muhammad Yahya </h1>
       <span>Front End developer</span>
     </div>
-    <div class="btn">
+    <div class="btn reveal">
       <a href="#section2" class="button hero-button" style="--clr: #00B7C7">
         <span class="button__icon-wrapper">
           <svg viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="button__icon-svg" width="10">
@@ -75,7 +75,7 @@
     </div>
   </section>
   <section id="section2">
-    <div class="information">
+    <div class="information reveal">
       <h1>I'am Muhammad Yahya.</h1>
       <div class="details">
         <span>I'm a design-focused front-end developer who loves building clean, responsive, and modern web interfaces.
@@ -83,16 +83,16 @@
           <br>smooth user experiences, and optimizing pages and social platforms for better reach and
           performance.</span>
       </div>
-      <div class="social-links fade-up">
+      <div class="social-links reveal">
         <a href="https://github.com/muhammad-yahya-official" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/muhammadyahyaofficial/" target="_blank"><i class="fab fa-linkedin"></i></a>
       </div>
-      <div class="profile-pic">
+      <div class="profile-pic reveal">
         <img src="./images/Gemini_Generated_Image_mc7vfmmc7vfmmc7v.png" alt="Muhammad Yahya">
       </div>
     </div>
     <div class="main">
-      <div class="right">
+      <div class="right reveal">
         <h1>About me: </h1>
         <hr>
         <span>I'm a dedicated front-end developer with a background in FSC Pre-Medical and a passion for creating clean,
@@ -113,8 +113,7 @@
       </div>
 
 
-      <div class="left">
-
+      <div class="left reveal">
         <h1>Experience :</h1>
         <hr>
         <span>I work as a freelance front-end developer and digital optimization specialist, helping clients build
@@ -138,7 +137,7 @@
 
 
   <section id="section3">
-    <div class="container">
+    <div class="container reveal">
       <div class="head">
         <h1>What I Do</h1>
         <br>
@@ -177,7 +176,7 @@
       </div>
     </div>
 
-    <div class="resume">
+    <div class="resume reveal">
       <a href="./assets/Final-Resume.pdf" download>
         <button class="button resume-button">
           View Resume
@@ -192,11 +191,11 @@
   </section>
 
   <section id="section4" class="vanta-bg">
-    <h1>WHAT I'VE DONE</h1>
+    <h1 class="reveal">WHAT I'VE DONE</h1>
     <br>
-    <span>(more coming soon)</span>
+    <span class="reveal">(more coming soon)</span>
 
-    <div class="projectss">
+    <div class="projectss reveal">
       <div class="first">
 
         <div class="project-card">
@@ -251,8 +250,8 @@
   </section>
 
   <section id="section5" class="vibe-coding">
-    <h1>Vibe Coding</h1>
-    <div class="projectss">
+    <h1 class="reveal">Vibe Coding</h1>
+    <div class="projectss reveal">
       <div class="first">
         <div class="project-card">
           <!-- Placeholder or duplicate for now as user requested structure to upload projects later -->
@@ -399,6 +398,7 @@
   </script>
 
   <script src="./js/vibe-coding.js"></script>
+  <script src="./js/animations.js"></script>
 </body>
 
 </html>
