Updated website content

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -254,10 +254,8 @@
           <!-- Placeholder or duplicate for now as user requested structure to upload projects later -->
           <a href="https://abudhabicurtains.vercel.app/" target="_blank">
             <img src="./images/Screenshot 2026-01-13 151639.png" alt="Project Preview">
-            <div class="overlay"><span><i class="fa-solid fa-code" style="color: #ffffff;"></i> Abu Dhabi Curtains
-                Elegant Web Design <br>
-                for a Home Furnishing Brand</span>
-            </div>
+            <div class="overlay"><span><i class="fa-solid fa-magnifying-glass-plus" style="color: #ffffff;"></i> Abu
+                Dhabi Curtains Elegant Web Design</span></div>
           </a>
         </div>
         <!-- <div class="project-card">
